# neatbot

./: Cargo.toml
src/: client.rs  config.rs  connection.rs  irc.rs  main.rs  plugin.rs
