[package]
name = "neatbot"
version = "0.1.0"
authors = ["Ell <alan@cattes.us>"]
edition = "2018"

[dependencies]
anyhow = "1.0.35"
thiserror = "1.0.22"
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5.1", features = ["codec"] }
futures = "0.3.0"
regex = "1.4.2"
toml = "0.5.7"
irc-rust = "0.3"
serde = { version = "1.0.118", features = ["derive"] }
platform-dirs = "0.3.0"
tokio-rustls = "0.21.1"
mlua = { version = "0.4", features = ["lua54", "vendored"] }